upgrade parent version fix relativePath warning for m3
git-svn-id: https://svn.apache.org/repos/asf/maven/shared/trunk@1095311 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@ under the License.
   <parent>
     <groupId>org.apache.maven.shared</groupId>
     <artifactId>maven-shared-components</artifactId>
-    <version>15</version>
+    <version>16</version>
+    <relativePath>../maven-shared-components/pom.xml</relativePath>
   </parent>
 
   <artifactId>maven-repository-builder</artifactId>
