--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
       <artifactId>maven-shared-utils</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>0.3</version>
     </dependency>
 
     <dependency>
