[MSHARED-371] Increased chance of java8 compliance by updating to asm5.x based plexus-component-*
git-svn-id: https://svn.apache.org/repos/asf/maven/shared/trunk@1633997 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@ under the License.
       <plugin>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-component-metadata</artifactId>
+        <version>1.6</version>
         <executions>
           <execution>
             <id>create-component-descriptor</id>
