--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@ under the License.
   </scm>
   <issueManagement>
     <system>jira</system>
-    <url>http://jira.codehaus.org/browse/MSHARED/component/13275</url>
+    <url>https://issues.apache.org/jira/browse/MSHARED/component/12326437</url>
   </issueManagement>
   <distributionManagement>
     <site>
