--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,19 @@ under the License.
   <name>Apache Maven Repository Builder</name>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/maven/shared/trunk/maven-repository-builder</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/shared/trunk/maven-repository-builder</developerConnection>
-    <url>http://svn.apache.org/viewvc/maven/shared/trunk/maven-repository-builder</url>
+    <connection>scm:git:https://gitbox.apache.org/repos/asf/maven-repository-builder.git</connection>
+    <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/maven-repository-builder.git</developerConnection>
+    <url>https://github.com/apache/maven-repository-builder/tree/${project.scm.tag}</url>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>jira</system>
     <url>https://issues.apache.org/jira/browse/MSHARED/component/12326437</url>
   </issueManagement>
+  <ciManagement>
+    <system>Jenkins</system>
+    <url>https://builds.apache.org/job/maven-box/job/maven-repository-builder/</url>
+  </ciManagement>
   <distributionManagement>
     <site>
       <id>apache.website</id>
